2023-March-04 Struan Robertson

		* gStructure.h/.cpp, HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, ClassicalCoupledRotors.cpp: 
		Fix for the over weighting of the SRG vector.

		* Baseline update.

2023-Februrary-02 Struan Robertson

		* gWellRadiationTransition.h: Tided Planck distribution.

2023-Februrary-02 Struan Robertson

		* HinderedRotorQM1D.cpp: Fix for parsing bug.

		* System.cpp: Minor change to when population is calculated to improve efficiency.

		* gWellRadiationTransition.h: Altered Planck distribution units.

2023-January-29 Struan Robertson

		* ConditionsManager.cpp: Fix for incorrect updated of trace weights in .xml file.

		* Documentation update.

2023-January-17 Struan Robertson

		* CollisionOperator.cpp: Fix for isomer decay trace analysis issue.

2023-January-15 Struan Robertson

		* ParallelManager.h, main.cpp: Added new error checking method for parallel execution
		and applied to main method.

2023-January-14 Struan Robertson

		* CollisionOperator.cpp: Speculative fix for isomer decay trace analysis issue.

		* Baseline update.

2022-December-29 Struan Robertson

		* gTransitionState.h/.cpp, Molecule.cpp: Implementation of transition state class
		revised so that imaginary frequency set at instantiation is not over written.

2022-December-28 Struan Robertson

		* gStructure: Add weighting to vector SRG vector.

		* Baseline update to relating the SRG vector change.

		* Update of VC16 project.

		* Update of installer script.

2022-November-21 Struan Robertson

		* DensityOfStates.h/.cpp, gDensityOfStates.h/.cpp and classes derived from 
		DensityOfStatesCalculator: Improved naming of thermodynamic contribution tables.

2022-November-20 Struan Robertson

		* DensityOfStates.h/.cpp, gDensityOfStates.h/.cpp, ThermodynamicTable.cpp and
		classes derived from DensityOfStatesCalculator: Implementation of thermodynamic
		function components table.

2022-November-14 Struan Robertson
