@@ -340,6 +340,13 @@ copy "./%testName%.test" "./%bline%%testName%.test"
 IF "%1"=="-o" copy "./%testName%.log" "./%bline%%testName%.log"
 cd ..
 
+cd "InternalRotor"
+set testName=InternalRotor
+%cmdline% -N "%testName%.xml"
+copy "%testName%.test" %bline%
+IF "%1"=="-o" copy "./%testName%.log" "./%bline%%testName%.log"
+cd ..
+
 :OUT
 
 echo Start Time=%starttime% - End Time=%time%
