@@ -435,5 +435,14 @@ if [ "$1" == "-o" ] ; then
 fi
 cd ..
 
+cd "InternalRotor"
+testName="InternalRotor"
+$cmdline -N $testName.xml
+cp ./$testName.test ./$bline$testName.test
+if [ "$1" == "-o" ] ; then
+  cp ./$testName.log ./$bline$testName.log
+fi
+cd ..
+
 echo Start Time=$starttime - End Time=`date`
 
